--- a/site/src/main/resources/templates/exchangeDetails.html
+++ b/site/src/main/resources/templates/exchangeDetails.html
@@ -3,6 +3,7 @@
 <div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
 
     <main class="wrapper">
+        <div class="alert alert-success mt-2" role="alert" th:text="${successA}" th:if="${successA}"></div>
         <div class="exchanges">
             <div class="">
 
