--- a/site/src/main/resources/templates/createExchange.html
+++ b/site/src/main/resources/templates/createExchange.html
@@ -75,6 +75,7 @@
         </div>
 
     </div>
+    <div class="alert alert-danger m-2" role="alert" th:text="${errorA}" th:if="${errorA}"></div>
     <div class="text-center" style="margin: 0 auto">
         <h3> Your books:</h3>
     </div>
