--- a/site/src/main/resources/templates/exchangeDetails.html
+++ b/site/src/main/resources/templates/exchangeDetails.html
@@ -130,6 +130,7 @@
 
 
             <div th:if="${canOffer}" class="mt-4">
+
                 <form method="post" th:action="@{'/postOffer'}">
                     <button class="btn btn-dark m-3"   >+ SUBMIT +</button> <br>
                     <input type="hidden" name="exchange_id" th:value="${exchange.getId()}">
@@ -174,6 +175,7 @@
             <div class="text-center" style="margin: 0 auto">
                 <h3> Your books:</h3>
             </div>
+                <div class="alert alert-danger mt-2" role="alert" th:text="${errorA}" th:if="${errorA}"></div>
                 <form method="get" th:action="@{'#pickUserBooks'}"  class="mt-3" id="pickUserBooks">
                     <div class="row pl-4">
                         <input type="text" class="form-control col-11 shadow " name="searchUserStr" >
