--- a/site/src/main/resources/templates/chat.html
+++ b/site/src/main/resources/templates/chat.html
@@ -4,7 +4,7 @@
 
 <div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
 
-  <body >
+  <body style="background-color: var(--primary_col)">
   <div class="container" style="margin-top: 50px">
     <div class="row">
       <div class="col-md-12">
@@ -15,9 +15,9 @@
 
     </div>
     <div class="row">
-      <div class="col-md-12" style=" text-align: start !important" >
+      <div class="col-md-12 exchange" style=" text-align: start !important" >
 
-        <div class="text-center">
+        <div class="text-center" style="color: white; font-weight: bold">
         Chat with  <div class="user__logo">
         <img th:src="@{'/viewphoto/'+${chatWith.getUserAvatar()}}" alt="userLogo" class="chat_ava">
       </div>
@@ -27,21 +27,8 @@
         </div>
 
         <div id="message-history" class="table table-striped">
-          <div>
-          <tr>
-            <th>Messages
-              <span
-                      id="notifications"
-                      style="
-                                    color: white;
-                                    background-color: red;
-                                    padding-left: 15px;
-                                    padding-right: 15px;">
-                            </span>
-            </th>
-          </tr>
-          </div>
-          <div id="messages" style="height: 300px ; overflow: scroll">
+
+          <div id="messages" style="height: 300px ; overflow: scroll; background-color: white; border-radius: 3%">
           <div th:each="msg : ${messages}" class=" ">
 
             <div th:if="${me.equals(msg.getUserOne().getEmail()) && !msg.getContent().contains('Your opponent canceled offer') && !msg.getContent().contains('Your opponent confirms exchange.')}" style="background-color: #b4de62 ; width: 35%" class="ml-auto  p-3 m-2 rounded">
@@ -67,12 +54,12 @@
         <div class="col-md-12">
           <div class="form-inline">
             <div class="">
-              <input type="text" id="private-message" class="" placeholder="Enter your message here...">
+              <input type="text" id="private-message" class=""  placeholder="Enter your message here...">
               <input type="hidden" id="opponent" th:value="${opponent}" class="" placeholder="Enter your message here...">
               <input type="hidden" id="exchange_id" th:value="${exchangeId}" class="" placeholder="Enter your message here...">
               <input type="hidden" id="me" th:value="${me}" class="" placeholder="Enter your message here...">
             </div>
-            <button id="send-private" class="btn btn-default" type="button">Send</button>
+            <button id="send-private" class="btn btn-info" type="button">Send</button>
           </div>
         </div>
 
