--- a/site/src/main/resources/templates/exchanges.html
+++ b/site/src/main/resources/templates/exchanges.html
@@ -3,7 +3,7 @@
 
 <div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
     <div class="text-center">
-        <a href="/createExchange" class="btn btn-danger m-3">Create Exchange</a>
+        <a href="/createExchange" class="btn btn-success m-3">Create exchange</a>
     </div>
 
     <div class="   m-0 " style="margin: 0 auto" >
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="col-2" style="margin-top: 3em !important;">
-                    <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-0.jpg" class="swap"/>
+                    <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-21.jpg" class="swap"/>
                 </div>
 
                 <div class="col-5" >
