--- a/site/src/main/resources/templates/library.html
+++ b/site/src/main/resources/templates/library.html
@@ -3,7 +3,7 @@
 
 <div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
     <div class="text-center">
-    <button class="btn btn-dark m-3"  data-toggle="modal" data-target="#addBook" >+ ADD BOOK +</button>
+    <button class="btn btn-success m-3"  data-toggle="modal" data-target="#addBook" >Add book</button>
     </div>
     <div class="alert alert-success" role="alert" th:text="${successA}" th:if="${successA}"></div>
     <div class="alert alert-danger" role="alert" th:text="${errorA}" th:if="${errorA}"></div>
