--- a/admin/src/main/resources/templates/admin.html
+++ b/admin/src/main/resources/templates/admin.html
@@ -4,13 +4,12 @@
 
 
     <div class="container mt-3">
-        <button class="btn btn-info ml-4"  data-toggle="modal" data-target="#addBook" >+ ADD NEW BOOK</button>
-        <button class="btn btn-success"  data-toggle="modal" data-target="#addAuthor" >+ ADD NEW AUTHOR</button>
-        <button class="btn btn-warning"  data-toggle="modal" data-target="#addGenre" >+ ADD NEW GENRE</button>
-        <button class="btn btn-secondary"  data-toggle="modal" data-target="#addCategory" >+ ADD NEW CATEGORY</button>
-        <button class="btn btn-dark"  data-toggle="modal" data-target="#addUser" >+ ADD NEW USER</button>
-        <button class="btn btn-danger"  data-toggle="modal" data-target="#addRole" >+ ADD NEW ROLE</button>
-        <div class="modal fade" id="addBook" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+        <button class="btn btn-success ml-5"  data-toggle="modal" data-target="#addBook" >+ ADD NEW BOOK</button>
+        <button class="btn btn-success ml-5"  data-toggle="modal" data-target="#addAuthor" >+ ADD NEW AUTHOR</button>
+        <button class="btn btn-success ml-5"  data-toggle="modal" data-target="#addGenre" >+ ADD NEW GENRE</button>
+        <button class="btn btn-success ml-5"  data-toggle="modal" data-target="#addUser" >+ ADD NEW USER</button>
+        <button class="btn btn-success ml-5"  data-toggle="modal" data-target="#addRole" >+ ADD NEW ROLE</button>
+        <div class="modal fade" id="addBook" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
@@ -22,7 +21,7 @@
                             <select class="form-control" name="author_id">
                                 <option th:each="author : ${authors}" th:text="${author.getName()}" th:value="${author.getId()}"></option>
 
-                            </select>
+                            </select><br>
                             <input type="file" class="form-control" name="cover">
                         </div>
                         <div class="modal-footer">
@@ -33,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="addGenre" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addGenre" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -50,7 +49,7 @@
             </div></div>
         </div>
     </div>
-    <div class="modal fade" id="addUser" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addUser" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -71,7 +70,7 @@
         </div></div>
     </div>
 
-    <div class="modal fade" id="addAuthor" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addAuthor" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -88,7 +87,7 @@
             </div></div>
     </div>
 
-    <div class="modal fade" id="edUser" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edUser" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -109,7 +108,7 @@
             </div></div>
         </div>
     </div>
-    <div class="modal fade" id="addRole" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addRole" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -129,7 +128,7 @@
             </div></div>
         </div>
     </div>
-    <div class="modal fade" id="edCat" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edCat" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -151,7 +150,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addBrand" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addBrand" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -175,7 +174,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="edAuthor" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edAuthor" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -193,7 +192,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addCountry" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addCountry" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -213,7 +212,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="edGenre" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edGenre" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true" style="color: black">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -232,15 +231,15 @@
         </div>
     </div>
 
-    <div class="container mt-3 border border-secondary">
+    <div class="container mt-3" style="background-color: #e9ecef; padding-top: 1px">
         <div class="row mt-5">
             <div class="col-12">
 
 
-                <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
+                <div class="jumbotron text-center" style="border: 2px solid #28a745; color: white;font-size: 40px;background-color: #202124FF">
                     BOOKS
                 </div>
-                <table class="table table-striped">
+                <table class="table table-striped" >
                     <thead>
                     <tr>
                         <th>ID</th>
@@ -256,19 +255,17 @@
                         <td th:text="${i.getTitle()}"></td>
                         <td th:text="${i.getAuthor()!=null?i.getAuthor().name:'------'}"></td>
                         <td>
-                            <a th:href="@{'/book_details/' + ${i.getId()}}" class="btn btn-info">
-
-                                EDIT
-
+                            <a th:href="@{'/book_details/' + ${i.getId()}}" class="btn btn-warning">
+                                <span style="color:black; font-weight: 500">EDIT</span>
                             </a>
                         </td>
                     </tr>
                     </tbody>
                 </table>
+                <br>
 
 
-
-                <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
+                <div class="jumbotron text-center" style="border: 2px solid #28a745; color: white;font-size: 40px;background-color: #202124FF">
                     GENRES
                 </div>
                 <table class="table table-striped">
@@ -284,16 +281,15 @@
                         <td th:text="${i.getId()}"></td>
                         <td th:text="${i.getName()}"></td>
                         <td  >
-                            <button th:onclick="edit([[${i.getName()}]]); editidctn([[${i.getId()}]]);   " data-toggle="modal" class="btn btn-info" data-target="#edGenre" >
-
-EDIT
-
+                            <button th:onclick="edit([[${i.getName()}]]); editidctn([[${i.getId()}]]);   " data-toggle="modal" class="btn btn-warning" data-target="#edGenre" >
+                                <span style="color:black; font-weight: 500">EDIT</span>
                             </button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
+                <br>
+                <div class="jumbotron text-center" style="border: 2px solid #28a745; color: white;font-size: 40px;background-color: #202124FF">
                     AUTHORS
                 </div>
                 <table class="table table-striped">
@@ -309,48 +305,18 @@ EDIT
                         <td th:text="${i.getId()}"></td>
                         <td th:text="${i.getName()}"></td>
                         <td  >
-                            <button th:onclick="edit2([[${i.getName()}]]);  editidbr([[${i.getId()}]]);  " data-toggle="modal" class="btn btn-info" data-target="#edAuthor" >
-
-                                EDIT
-
+                            <button th:onclick="edit2([[${i.getName()}]]);  editidbr([[${i.getId()}]]);  " data-toggle="modal" class="btn btn-warning" data-target="#edAuthor" >
+                                <span style="color:black; font-weight: 500">EDIT</span>
                             </button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-
-                <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
-                    CATEGORIES
-                </div>
-
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>NAME</th>
-                        <th>URL</th>
-                        <th>EDIT</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="i : ${cats}">
-                        <td th:text="${i.getId()}"></td>
-                        <td th:text="${i.getName()}"></td>
-                        <td th:text="${i.getLogoURL()}"></td>
-                        <td  >
-                            <button th:onclick="editcat1([[${i.getName()}]]); editcat2([[${i.getLogoURL()}]]); editcat3([[${i.getId()}]]);  " data-toggle="modal" class="btn btn-info" data-target="#edCat" >
-
-                                EDIT
-
-                            </button>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-                <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
+                <br>
+                <div class="jumbotron text-center" style="border: 2px solid #28a745; color: white;font-size: 40px;background-color: #202124FF">
                     USERS
                 </div>
-                <table class="table table-striped">
+                <table class="table table-striped" >
                     <thead>
                     <tr>
                         <th>ID</th>
@@ -368,16 +334,15 @@ EDIT
                         <td th:text="${i.getPassword()}"></td>
 
                         <td  >
-                            <a th:href="@{'/user_details/' + ${i.getId()}}" class="btn btn-info">
-
-                                EDIT
-
+                            <a th:href="@{'/user_details/' + ${i.getId()}}" class="btn btn-warning">
+                                <span style="color:black; font-weight: 500">EDIT</span>
                             </a>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
+                <br>
+                <div class="jumbotron text-center" style="border: 2px solid #28a745; color: white;font-size: 40px;background-color: #202124FF">
                     ROLES
                 </div>
                 <table class="table table-striped">
@@ -401,23 +366,8 @@ EDIT
                     </tr>
                     </tbody>
                 </table>
-
-
-
-
-
-
             </div>
         </div>
     </div>
-
-
-
-
-
 </div>
-
-
-
-
 </html>
