--- a/admin/src/main/resources/templates/edit_user.html
+++ b/admin/src/main/resources/templates/edit_user.html
@@ -1,15 +1,17 @@
 
 <html   xmlns:th = "http://www.thymeleaf.org" xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorate = "layout/loginLayout.html" >
 
-<div layout:fragment="site_content" >
-    <div class="col-6">
+<div layout:fragment="site_content" class="w-100" >
+    <div class="container mt-3" style="background-color: #e9ecef; padding-top: 10px; padding-bottom: 10px; color: black">
 
             <form th:action="@{/eduser}" method="post">
                 <div class="form-group">
                     <input type="hidden" th:value="${user.getId()}" name="id" id="user_id">
-                    Email <input type="text" class="form-control" th:value="${user.getEmail()}" id="email_id" name="email">
-                    Full name <input type="text" id="fname_id" th:value="${user.getFullName()}" class="form-control" name="name">
-                    Password
+                    <h5>Email</h5><br>
+                    <input type="text" class="form-control" th:value="${user.getEmail()}" id="email_id" name="email">
+                    <h5>Full name</h5><br>
+                    <input type="text" id="fname_id" th:value="${user.getFullName()}" class="form-control" name="name">
+                    <h5>Password</h5>
                     <input type="text" id="pass_id"   th:value="${user.getPassword()}" class="form-control" name="pass">
 
                 </div>
