--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 
 
 
-    <div class="jumbotron  shadow text-center mt-5" style="width: 300px; margin: 0 auto;  background-color: #b4de62" >
+    <div class="jumbotron shadow text-center mt-5" style="width: 300px; margin: 0 auto;  background-color: #202124FF; color: white" >
 
         <div class="alert alert-danger" role="alert" th:text="${param.error}" th:if="${param.error}"></div>
     <form th:action="@{'/auth'}" method="post">
