--- a/site/src/main/resources/templates/createExchangeF.html
+++ b/site/src/main/resources/templates/createExchangeF.html
@@ -3,7 +3,7 @@
 
 <div layout:fragment="site_content" class="libcontainer " >
     <div class="text-center" style="margin: 0 auto">
-    <button class="btn btn-dark m-3"  data-toggle="modal" data-target="#addBook" >+ SUBMIT +</button>
+    <button class="btn btn-success m-3"  data-toggle="modal" data-target="#addBook" >Submit</button>
 
 
 
@@ -33,7 +33,7 @@
                 </div>
 
         <div class="col-2" >
-            <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-0.jpg" class="swap"/>
+            <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-21.jpg" class="swap"/>
         </div>
 
                 <div class="col-5" >
